spudoolicom/static/style.css
/* ... */
.container-fortitle {
  background: #fafafa;
  padding: 60px 0 5px 0;
  margin-bottom: 50px
}

.container-fortitle2 {
  background: #fafafa;
  padding: 60px 0 5px 0;
  margin-bottom: 15px
}

.container-slideclient {
  padding: 0 0 20px 0;
}

#photoblog-image {
  padding: 5px;
  background: #fff;
  border: 1px solid #444;
  margin-top: 20px;
}

#iso-info {
  width: 100%;
  padding: 5px;
  background: #fff;
  font-size: 10px;
  text-align: center;
  margin-bottom: 20px;
}


.embiggen-photoblog-image {
  width: 100%;
  padding: 5px;
  background: #fff;
  font-size: 14px;
  color: #195ddd;
  text-align: right;
  margin-bottom: 5px;
  cursor: pointer;
}


ion-icon {
  font-size: 32px;
}

#comments {
  padding: 10px;
  background: #fff;
  font-size: 14px;
  margin-left: 10%;
  margin-right: 10%;
}

#comments ul {
  list-style-type: none;
  margin: 0px;
  padding: 10px;
}

#comments li {
  display: block;
  margin: 0px;
  border-bottom: 1px dotted #444444;
  padding-bottom: 10px;
  color: #444;
  text-decoration: none;
  padding: 3px;
}

.chartcenter {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

#add-comment {
  padding: 5px;
  background: #f5f5f5;
  font-size: 16px;
  margin-left: auto;
  margin-right: auto;
}

#flash {
  margin-top: 20px;
  border-color: rgba(0, 255, 38, 0.75);
  border-width: 1px;
}

#a500 {
  padding: 5px;
  background: #fff;
  font-size: 200px;
  text-align: right;
  margin-bottom: 20px;
}

.leftborderlastfm {
  border-left-style: solid;
  border-left-color: #b90000;
  border-width: 2px;
  padding: 10px;
  margin-bottom: 5px;
}

.leftborderswarm {
  border-left-style: solid;
  border-left-color: #ff9c31;
  border-width: 2px;
  padding: 10px;
  margin-bottom: 5px;
}

.leftborderdinner {
  border-left-style: solid;
  border-left-color: #146a11;
  border-width: 2px;
  padding: 10px;
  margin-bottom: 5px;
}

.leftborderbank {
  border-left-style: solid;
  border-left-color: #d5002b;
  border-width: 2px;
  padding: 10px;
  margin-bottom: 5px;
}

.leftbordertweets {
  border-left-style: solid;
  border-left-color: rgb(29, 155, 240);
  border-width: 2px;
  padding: 10px;
  margin-bottom: 5px;
}

.leftborderblog {
  border-left-style: solid;
  border-left-color: rgb(0, 0, 0);
  border-width: 2px;
  padding: 10px;
  margin-bottom: 5px;
}

.leftbordergithub {
  border-left-style: solid;
  border-left-color: rgb(0, 0, 0);
  border-width: 2px;
  padding: 10px;
  margin-bottom: 5px;
}

.leftbordermastodon {
  border-left-style: solid;
  border-left-color: rgb(43, 144, 217);
  border-width: 2px;
  padding: 10px;
  margin-bottom: 5px;
}

.ledspointer {
  cursor: pointer;
  color: #195ddd;
}

.ledspointer:hover {
  text-decoration: underline;
}


/* Styles for the photo gallery */
.photo-gallery {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
}

.thumbnail {
  width: 200px;
  height: 200px;
  overflow: hidden;
  cursor: pointer;
}

.thumbnail img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

/* Styles for the modal */
.modal {
  display: none;
  position: fixed;
  z-index: 2000;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0, 0, 0, 0.9);
  padding-top: 80px;
}

.modal-content {
  margin: auto;
  display: block;
  max-width: 90%;
  max-height: 90%;
  object-fit: contain;
}

.close {
  position: absolute;
  top: 15px;
  right: 35px;
  color: #f1f1f1;
  font-size: 40px;
  font-weight: bold;
  transition: 0.3s;
}

.close:hover,
.close:focus {
  color: #bbb;
  text-decoration: none;
  cursor: pointer;
}

.too-much-queen-list {
  list-style-type: none;

}

#top-bar {
  height: 3px;
  background-color: #195ddd;
}

#map {
  width: 100%;
  height: 1000px;
  margin: 0;
}

.mapgrayscale {
  filter: grayscale(60%);
}

